--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,14 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 
-
-
     implementation 'com.android.support:appcompat-v7:23.4.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation files('libs/activation.jar')
+    implementation files('libs/additionnal.jar')
+    implementation files('libs/mail.jar')
 }
+
+
 apply plugin: 'com.google.gms.google-services'
