--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -25,6 +24,9 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".View.MainActivity"></activity>
+        <activity android:name=".View.RegisterAcivity"></activity>
+        <activity android:name=".View.ForgetPasswordActivity"></activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
