--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.android.gms:play-services-tasks:16.0.1'
 
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.android.support:appcompat-v7:23.4.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
