--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.UploadImageActivity">
+        <activity android:name=".View.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +27,7 @@
         <activity android:name=".View.MainActivity"></activity>
         <activity android:name=".View.RegisterAcivity"></activity>
         <activity android:name=".View.ForgetPasswordActivity"></activity>
+        <activity android:name=".View.WatchedHairActivity"></activity>
 
     </application>
 
